# ruggle

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
roogle-engine/: Cargo.toml
roogle-engine/src/: compare.rs  lib.rs  search.rs  types.rs
roogle-engine/src/query/: mod.rs  parse.rs
roogle-server/: Cargo.toml  cli.rs  server.rs
roogle-server/src/: lib.rs  main.rs
roogle-server/static/: index.html
roogle-util/: Cargo.toml
ruggle-engine/: Cargo.toml
ruggle-engine/src/: compare.rs  lib.rs  search.rs  types.rs
ruggle-engine/src/query/: mod.rs  parse.rs
ruggle-server/: Cargo.toml  cli.rs  server.rs
ruggle-server/src/: lib.rs
ruggle-server/static/: index.html
ruggle-server/tests/: index_test_crate.rs
ruggle-util/: Cargo.toml
ruggle-util/src/: lib.rs  pathtree.rs
test/: Cargo.toml
test/src/: error.rs  lib.rs  macros.rs  prelude.rs  types.rs
test/src/alg/: graph.rs  mod.rs  sort.rs
test/src/domain/: mod.rs  user.rs
test/src/domain/order/: mod.rs  status.rs
test/src/util/: math.rs  mod.rs  text.rs
vscode-roogle/: LICENSE  package-lock.json  package.json  roogle-0.0.1.vsix  roogle-2.0.0.vsix  tsconfig.json
vscode-roogle/src/: extension.ts
vscode-ruggle/: .vscodeignore  README.md  package-lock.json  package.json
vscode-ruggle/src/: extension.ts
