[package]
name = "roogle-server"
version = "1.0.0"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
edition = "2021"
description = "A Rust API search engine"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
serde_json = "1.0"
rustdoc-types = "0.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tracing-tree = "0.1"
structopt = "0.3.25"
serde = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
rayon = "1.11.0"
bincode = { version = "2.0.1", features = ["serde"] }

[dependencies.roogle-engine]
path = "../roogle-engine"
version = "1.0.2"

[dependencies.roogle-util]
path = "../roogle-util"
version = "0.1.0"

[[bin]]
name = "roogle-server"
path = "server.rs"

[[bin]]
name = "roogle-cli"
path = "cli.rs"