[package]
name = "ruggle-engine"
version = "0.0.1"
authors = ["Alperen Keles <akeles@umd.edu>"]
edition = "2021"
description = "Structural search for Rust"
documentation = "https://docs.rs/ruggle-engine"
readme = "../README.md"
repository = "https://github.com/alpaylan/ruggle"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"] }
levenshtein = "1.0"
nom = "7.0"
rustdoc-types = "0.56.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
tracing = "0.1"
