[package]
name = "ruggle-server"
version = "0.0.1"
authors = ["Alperen Keles <akeles@umd.edu>"]
edition = "2021"
description = "Structural search for Rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
serde_json = "1.0"
rustdoc-types = "0.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tracing-tree = "0.1"
structopt = "0.3.25"
serde = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
urlencoding = "2"
rayon = "1.11.0"
bincode = { version = "2.0.1", features = ["serde"] }
guppy = "0.17.23"
ruzstd = "0.8.1"
crates_io_api = "0.12.0"

[dependencies.ruggle-engine]
path = "../ruggle-engine"
version = "0.0.1"

[dependencies.ruggle-util]
path = "../ruggle-util"
version = "0.0.1"

[[bin]]
name = "ruggle-server"
path = "server.rs"

[[bin]]
name = "ruggle-cli"
path = "cli.rs"
