[package]
name = "ruggle-util"
version = "0.0.1"
authors = ["Alperen Keles <akeles@umd.edu>"]
edition = "2021"
description = "Utilities for Ruggle"
documentation = "https://docs.rs/ruggle-util"
repository = "https://github.com/alpaylan/ruggle"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
guppy = "0.17.23"
rustdoc-types = "0.5.0"
