[package]
name = "test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A feature-rich crate for testing indexers with diverse Rust constructs"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"], optional = true }
once_cell = "1"

[dev-dependencies]
proptest = "1"


